--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Practice your typing skills with a quote from Sherlock Holmes. Click **start** to begin!</p>
   <p id="quote"></p> <!-- This will display our quote -->
   <p id="message"></p> <!-- This will display any status messages -->
-  <div>
+  <div class="input">
     <input type="text" aria-label="current word" id="typed-value" /> <!-- The textbox for typing -->
     <button type="button" id="start">Start</button> <!-- To start the game -->
   </div>
