--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <p>Practice your typing skills with a quote from Sherlock Holmes. Click **start** to begin!</p>
   <p id="quote"></p> <!-- This will display our quote -->
   <p id="message"></p> <!-- This will display any status messages -->
-  <div class="input">
+  <div>
     <input type="text" aria-label="current word" id="typed-value" /> <!-- The textbox for typing -->
     <button type="button" id="start">Start</button> <!-- To start the game -->
   </div>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
