--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" aria-label="current word" id="typed-value" /> <!-- The textbox for typing -->
     <button type="button" id="start">Start</button> <!-- To start the game -->
   </div>
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
 
